# fleurprediction

./: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
fleurprediction/dataset/: make_dataset.py
fleurprediction/features/: build_features.py
fleurprediction/models/: deep_api.py
fleurprediction/tests/: test_unit_model.py
fleurprediction/visualization/: visualize.py
notebooks/: 1.0-fleurprediction_start.ipynb
