# -*- coding: utf-8 -*-
[metadata]
name = fleurprediction
summary = Segmenter des fleurs de pommier
description-file =
    README.md
author = hereariim
author-email = herearii.metuarea@gmail.com
version = 0.0.1
license = No license file
home-page = https://github.com/hereariim/fleurprediction
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    fleurprediction

[entry_points]

deepaas.v2.model = 
    fleurprediction = fleurprediction.models.deep_api

